kcm: Clarify requriements for service manager

krdpserver calls into systemd to manage the service.

Users without systemd are reponsible for figuring this out themselves,
as we don't have a service manager to work with.

The user shouldn't be presented with controls that don't work, so tis
patch hides them when a service manager is not available.

BUG: 494231